--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8081/",
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
@@ -13,7 +12,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "set PORT=80 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
